--- a/FrontEnd/src/app/main-page/main-page.component.html
+++ b/FrontEnd/src/app/main-page/main-page.component.html
@@ -41,7 +41,7 @@
                             <div class="buttons">
                                 <button class="button" style="background-color: #f44336;" (click)="OnDeletePost(post.id)" type="button">Delete</button>
                                 <button class="button" style="background-color: #4CAF50;" type="button">Edite</button>
-                                <button class="button" style="background-color: #008CBA;" type="button">View</button>
+                                <button class="button" style="background-color: #008CBA;" type="button" (click)="OnclickView(post.id)">View</button>
                             </div>
                         </div>
                     </div>
