--- a/FrontEnd/src/app/nav-bar/nav-bar.component.html
+++ b/FrontEnd/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <header id="navbar">
         <ng-content></ng-content>
     <div id="MessageRight">
-        <a href="#" (click)="getFeed()">Feed</a>
+        <a href="#" (click)="getFeed()">{{ Viewed }}</a>
         <a href="#" style="margin-left: 10vw;">Logout</a>
     </div>
 </header>
