--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,7 +1,7 @@
-<app-nav-bar (Items)="showItemsPost($event)">
+<app-nav-bar (Items)="showItemsPost($event)" [Viewed]="homeandfeed">
     <div *ngIf="body !== undefined || null " id="MessageLeft">{{body}}</div>
 </app-nav-bar>
 
 <app-main-page *ngIf="IdView == 0" [POSTS] = "Items" (Body)="ShowMessage($event)" (View)="OpenViewPost($event)"></app-main-page>
 
-<app-view-post *appRouting="IdView" ></app-view-post>
+<app-view-post *appRouting="IdView" [Post]="post"></app-view-post>
