change Format date

--- a/FrontEnd/src/app/view-post/view-post.component.scss
+++ b/FrontEnd/src/app/view-post/view-post.component.scss
@@ -18,3 +18,8 @@
     padding-left: 5vw;
     font-style: italic;
 }
+.anotherDetail{
+    text-align: center;
+    border-bottom: 1px solid tan;
+    border-top: 1px solid tan;
+}
