--- a/FrontEnd/src/app/view-post/view-post.component.html
+++ b/FrontEnd/src/app/view-post/view-post.component.html
@@ -6,7 +6,8 @@
         <h1 class="title">{{Post.title}}</h1>
         <p class="content">{{Post.content}}</p>
 </div>
-    <h2 class="anotherDetail">Creat At : {{Post.CreatAt}}</h2>
+    <h2 class="anotherDetail">Creat At : {{Post.CreatAt | date}}</h2>
     <h2 class="anotherDetail">Creator</h2>
-    <ng-container *ngFor="let creator of Post.creator"></ng-container>
-    <h3>Name : {{ creator.name }}</h3>
+    <ng-container *ngFor="let creator of Post.creator">
+    <h3>Name : {{ creator}}</h3>
+</ng-container>
