--- a/FrontEnd/src/app/new-post/new-post.component.html
+++ b/FrontEnd/src/app/new-post/new-post.component.html
@@ -1,27 +1,30 @@
 <div class="backdrop" (click)="onClose()"></div>
 <div class="alert-box">
-    
-        <h2 style="padding-bottom: 13px; height: 5px; color: #5F11C1">New Post</h2>
-        <hr style="background-color: #5F11C1; height: 1px;">
-<form (submit)="AddPost(f)" #f="ngForm" enctype="multipart/form-data">
-    <div class="content">
-<div class="form-group">
-    <label class="form-Label" id="title" name="title">Title</label>
-    <input class="form-text" type="text" for="title" id="Inputtitle" name="Inputtitle" ngModel required>
-</div>
-<div class="form-group">
-    <label class="form-Label" id="Image" name="Image">Image</label>
-    <input class="form-text" type="file" for="Image" id="InputImage" name="InputImage" ngModel required (change)="selectImage($event)">
-    <img class="viewImage" [src]="filePath" >
-</div>
-<div class="form-group">
-    <label class="form-Label" id="content" name="content">Content</label>
-    <textarea class="form-Areatext" for="content" id="Inputcontent" name="Inputcontent" ngModel multiple required></textarea>
-</div>
-<button type="submit" [disabled]="!f.valid">Add Post</button>
-</div>
-</form>
-<div class="alert-box-actions">
-    <button class="btn btn-primary" (click)="onClose()">Close</button>
-  </div>
+
+    <h2 style="padding-bottom: 13px; height: 5px; color: #5F11C1">{{NewEditePost}}</h2>
+    <hr style="background-color: #5F11C1; height: 1px;">
+    <form (submit)="AddEditButton(f)" #f="ngForm">
+        <div class="content">
+            <div class="form-group">
+                <label class="form-Label" id="title" name="title">Title</label>
+                <input class="form-text" type="text" for="title" id="Inputtitle" name="Inputtitle" ngModel required>
+            </div>
+            <div class="form-group">
+                <label class="form-Label" id="Image" name="Image">Image</label>
+                <input class="form-text" type="file" for="Image" id="InputImage" name="InputImage" ngModel required
+                    (change)="selectImage($event)">
+                <img class="viewImage" [src]="filePath">
+            </div>
+            <div class="form-group">
+                <label class="form-Label" id="content" name="content">Content</label>
+                <textarea class="form-Areatext" for="content" id="Inputcontent" name="Inputcontent" ngModel
+                    required></textarea>
+            </div>
+            <button type="submit" *ngIf="Add" [disabled]="!f.valid">Add Post</button>
+            <button type="submit" *ngIf="Edit">Edit Post</button>
+        </div>
+    </form>
+    <div class="alert-box-actions">
+        <button class="btn btn-primary" (click)="onClose()">Close</button>
+    </div>
 </div>
