--- a/FrontEnd/src/app/main-page/main-page.component.scss
+++ b/FrontEnd/src/app/main-page/main-page.component.scss
@@ -87,7 +87,7 @@ main section:nth-child(2) {
       transform: scale(1.0); 
     } 
   }
-  
+//////////////////////////////////////////////////////////////////////////////////////////////////////  
   .ItemsData {
     display: block;
     margin: 10px;
